# PyTI_LPC_CMD

./: README.md  README_bin2strhex.md  bin2strhex-0x.sh  bin2strhex-xxd.sh  bin2strhex.c  bin2strhex.py  bin2strhex.sh  bin2strhex_c  pyproject.toml
docs/: build_pdf.sh  install_man.sh  pyti_lpc_cmd.1  pyti_lpc_cmd_paper.tex  pyti_lpc_cmd_paper.toc  refs.bib  tms5xxx_cleanroom_specification.md
example/: ga.txt
pyti_lpc_cmd/: __init__.py  __main__.py  audio_output.py  bitstream.py  chip_params.py  cli.py  frame_decoder.py  input_loader.py  resampler.py  synthesizer.py  validators.py
pyti_lpc_cmd/chips/: __init__.py  tms5100.py  tms5110.py  tms5200.py  tms5220.py
